<resources>
    <string name="app_name">Money Exchange App</string>
    <string name="converter_screen_title">Currency exchange converter</string>
    <string name="converter_history_screen_title">History</string>
    <string name="initializing">Initializing...</string>
    <string name="amount_hint">Amount</string>
    <string name="amount_calculated_hint">Total amount</string>
    <string name="failed_initialization">\nFailed to initialize. Reload?</string>
    <string name="real_time">Real time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="some_error">Something went wrong</string>
    <string name="btn_details_text">Details</string>
    <string name="last_three_days_historical_title">Last 3 days Historical data.</string>
    <string name="last_days_historical_title">Last 3 days Historical data for other  currencies.</string>
    <string name="check_internet_message">Please check your connection</string>
    <string name="error">Error!</string>
    <string name="retry">Retry</string>
    <string name="go_back">Go Back</string>
    <string name="notification_title">Exchange rate</string>
    <string name="default_amount">1</string>
    <string name="notification_subtitle">Loading rates</string>
</resources>